# biovault-desktop

./: .depcheckrc.json  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  .taurignore  AGENT.md  AGENTS.md  PAGE_HEADER_TEMPLATE.md  PROGRESS.md  README.md  TASK.md  UI_REBUILD_SUMMARY.md  biovault-app-dev.sh  biovault-app.sh  build-go-signed.sh  build-go.sh  build-signed.sh  build.ps1  build.sh  check-gatekeeper.sh  chrome-dev.md  clippy.sh  copy-vm.sh  dev-carika.sh  dev-desktop-live.sh  dev-desktop.ps1  dev-desktop.sh  dev-desktop2.sh  dev-live.sh  dev-madhava.sh  dev-new-ui-live.sh  dev-new-ui.sh  dev-three-old-new-ui.sh  dev-three.sh  dev-two-live.sh  dev-two-new-ui.sh  dev-two.sh  (+28 more)
bv-desktop-new/: package-lock.json  package.json  vite.config.js
data/: overlay_variants.json
docker/: docker-compose.signoz.yml  test-nextflow-runner.sh
docs/: agent-api.json  agent-api.md  progress.md  syftbox-recipes.md
flow-spec-guide/: MIGRATION.md  README.md
gwas-nextflow/: flow.yaml  manual.sh  module.yaml  nextflow.config  pipeline.yaml  project.yaml  workflow.nf
plans/: agent.md  fast-webrtc.md  flows.md  multiparty.md  observability.md  pipeline_ui_implementation_plan.md
scripts/: bootstrap-three.mjs  build-syftbox-dev.sh  build-syftbox-prod-signed.sh  build-syftbox-prod.sh  build-syftbox-rust.sh  bundled-deps.json  check-latest-bundled-deps.sh  clear-jaeger.sh  diagnose-live-hotlink.sh  diff_import_module.py  ensure-bundled-deps.sh  ensure-workspace-deps.sh  fetch-bundled-deps.sh  invite-landing-dev.sh  java.entitlements  materialize-templates.sh  remove-bundled-deps.sh  run-live-syqure-allele-agg-live2.sh  run-live-syqure-allele-agg-smpc.sh  run-live-syqure-allele-agg.sh  run-live-trusted-allele-agg.sh  setup-jaeger.sh  (+12 more)
src-tauri/: Cargo.toml  Entitlements.plist  Tauri.toml  build.rs  tauri.conf.go.json  tauri.conf.json  tauri.conf.new-ui.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/: templates
src-tauri/resources/bundled/: README.txt
src-tauri/resources/flows/: new-flow-templates.yaml
src-tauri/resources/templates/: 00-malicious-do.ipynb  00-malicious-ds.ipynb  00-malicious.json  01-hello-beaver.ipynb  01-hello-beaver.json  02-advanced-features-do.ipynb  02-advanced-features-ds.ipynb  02-advanced-features.json  03-neural-network-do.ipynb  03-neural-network-ds.ipynb  03-neural-network.json  04-gwas-do.ipynb  04-gwas-ds.ipynb  04-sessions-do-publish.ipynb  04-sessions-do-receive.ipynb  04-sessions-ds.ipynb  04-sessions.ipynb  04-sessions.json  05-gwas-do.ipynb  05-gwas-ds.ipynb  05-gwas.json  06-ecg-do.ipynb  06-ecg-ds.ipynb  06-ecg.json  07-single-cell-umap-do.ipynb  07-single-cell-umap-ds.ipynb  demo_do.ipynb  demo_ds.ipynb  notebooks.yaml  sc_test_do.ipynb  sc_test_ds.ipynb  session_template.ipynb
src-tauri/resources/templates/old/: Basic_analysis_SC.ipynb  DO.ipynb  DS.ipynb  data.csv  do.txt  ds.txt  mock.csv  sc_do.ipynb  sc_test_ds.ipynb  syftbox_do.ipynb  syftbox_ds.ipynb  test_do.ipynb  test_ds.ipynb
src-tauri/resources/templates/old/single_cell/: Basic_analysis_SC.ipynb
src-tauri/src/: lib.rs  logging.rs  main.rs  telemetry.rs  ws_bridge.rs
src-tauri/src/commands/: agent_api.rs  datasets.rs  dependencies.rs  files.rs  flows.rs  jupyter.rs  key.rs  logs.rs  messages.rs  mod.rs  modules.rs  multiparty.rs  notifications.rs  participants.rs  pipelines.rs  profiles.rs  projects.rs  runs.rs  sessions.rs  settings.rs  sql.rs  syftbox.rs  sync_tree.rs  whatsapp.rs
src-tauri/src/commands/files/: analyze.rs  crud.rs  import.rs  mod.rs  queue.rs  reference_data.rs  sample_data.rs  scan.rs
src-tauri/src/types/: mod.rs
(+393 files in other folders)
