[package]
name = "bv-desktop"
version = "0.1.5"
description = "BioVault Desktop"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bv_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# BioVault CLI library - shared business logic
biovault = { path = "../biovault/cli" }

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1.3"
sha2 = "0.10"
dirs = "5"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking"] }
chrono = "0.4"
tempfile = "3"
tokio-tungstenite = "0.24"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
os_pipe = "1"
libc = "0.2"
image = "0.25"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
