[package]
name = "bv-desktop"
version = "0.1.40"
description = "BioVault Desktop"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bv_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# BioVault CLI library - shared business logic
biovault = { path = "../biovault/cli" }

tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
walkdir = "2"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1.3"
sha2 = "0.10"
dirs = "5"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking"] }
chrono = "0.4"
tempfile = "3"
tokio-tungstenite = "0.24"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
os_pipe = "1"
libc = "0.2"
image = "0.25"
rand = "0.8"
hex = "0.4"
anyhow = "1.0"
syftbox-sdk = { path = "../syftbox-sdk", features = ["crypto", "process", "auth"] }
uuid = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"

[package.metadata.tauri.dev-watcher]
ignore = [
    "**/*.ipynb",
    "**/*.beaver",
    "**/*.bin",
    "**/*.h5ad",
    "**/*.parquet",
    "**/*.request",
    "**/*.response",
    "**/biovault/**",
    "**/sandbox/**",
    "**/sessions/**",
    "**/datasites/**",
    "**/unencrypted/**",
    "**/.venv/**",
    "**/node_modules/**",
    "**/target/**",
    "**/.git/**",
    "**/__pycache__/**",
    "**/.ipynb_checkpoints/**",
    "**/resources/templates/**",
    "src-tauri/resources/templates/**",
    "**/templates/*.ipynb",
    "**/demo_ds.ipynb"
]
